// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaField component renders 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-epZMHO {
    color: var(--colors-secondary300);
    display: block;
    font-family: var(--fonts-sans);
    font-weight: 500;
    margin: 0;
  }

  .c-WVzXr {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: none;
    color: var(--colors-tonal900);
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-md);
    font-weight: 400;
    line-height: 1.4;
    min-height: var(--sizes-6);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: calc(var(--space-2) + var(--space-1));
    padding-bottom: calc(var(--space-2) + var(--space-1));
    resize: vertical;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-WVzXr:focus {
    border-color: var(--colors-primary900);
    box-shadow: inset 0 0 0 1px var(--colors-primary900);
    outline: none;
  }

  .c-WVzXr[disabled] {
    opacity: 0.7;
    background-color: var(--colors-tonal300);
  }
}

@media  {
  .c-epZMHO-ehWmjE-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.625;
  }

  .c-epZMHO-ehWmjE-size-md::before {
    content: '';
    margin-bottom: -0.4489em;
    display: table;
  }

  .c-epZMHO-ehWmjE-size-md::after {
    content: '';
    margin-top: -0.4489em;
    display: table;
  }
}

@media  {
  .c-dhzjXW-iffOmLG-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-2);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iffOmLG-css"
      >
        <label
          class="c-epZMHO c-epZMHO-ehWmjE-size-md"
          for="description"
        />
      </div>
      <textarea
        class="c-WVzXr"
        id="description"
        name="description"
        placeholder="placeholder"
      />
    </div>
  </form>
</div>
`;

exports[`TextareaField component renders with an error 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-epZMHO {
    color: var(--colors-secondary300);
    display: block;
    font-family: var(--fonts-sans);
    font-weight: 500;
    margin: 0;
  }

  .c-WVzXr {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: none;
    color: var(--colors-tonal900);
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-md);
    font-weight: 400;
    line-height: 1.4;
    min-height: var(--sizes-6);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: calc(var(--space-2) + var(--space-1));
    padding-bottom: calc(var(--space-2) + var(--space-1));
    resize: vertical;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-WVzXr:focus {
    border-color: var(--colors-primary900);
    box-shadow: inset 0 0 0 1px var(--colors-primary900);
    outline: none;
  }

  .c-WVzXr[disabled] {
    opacity: 0.7;
    background-color: var(--colors-tonal300);
  }
}

@media  {
  .c-epZMHO-ehWmjE-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.625;
  }

  .c-epZMHO-ehWmjE-size-md::before {
    content: '';
    margin-bottom: -0.4489em;
    display: table;
  }

  .c-epZMHO-ehWmjE-size-md::after {
    content: '';
    margin-top: -0.4489em;
    display: table;
  }
}

@media  {
  .c-dhzjXW-iffOmLG-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-2);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iffOmLG-css"
      >
        <label
          class="c-epZMHO c-epZMHO-ehWmjE-size-md"
          for="description"
        />
      </div>
      <textarea
        class="c-WVzXr"
        error="Error Message"
        id="description"
        name="description"
        placeholder="placeholder"
      />
    </div>
  </form>
</div>
`;
